# censortracker

./: .babelrc  .dockerignore  .editorconfig  .eslintignore  .eslintrc.js  .eslintrc.json  .eslintrc.yml  .gitignore  CHANGELOG.md  CNAME  CONTRIBUTORS.md  Dockerfile  Gulpfile.js  LICENSE  Makefile  Pipfile  README-ru.md  README.md  README.rst  README_RU.md  censortracker.drawio  docker-compose.yml  emergency-endpoints.json  en.html  index.html  index.md  jest.config.js  package-lock.json  package.json  prettier.config.js  pyproject.toml  support.html  testing-workflow.yml  tsconfig.json  update-version.sh  webpack.chrome.config.js  webpack.config.js  webpack.firefox.config.js
.github/: FUNDING.yml
.github/media/: dpi-diagram.drawio
.github/workflows/: build.yml  codeql-analysis.yml
scripts/: checkLocaleStructureMatch.js  orderJson.js  orderLocaleMessages.js
src/chrome/: manifest.json
src/chrome/css/: main.css  options.css  popup.css  settings.css  unavailable.css
src/chrome/js/: background.js
src/chrome/manifest/: chrome.json
src/firefox/: manifest.json
static/css/: styles.css
static/files/: censor_tracker-18.2.0.xpi
tests/: sessions.spec.js  shortucts.spec.js  test_popup.py
tests/e2e/: popup.test.js  proxying.test.js  registry.test.js  unavailable.test.js
tests/integration/: test_popup.py
tests/js/: background.sepc.js  proxying.sepc.js  sessions.spec.js  shortucts.spec.js
tests/selenium/: index.js  test_popup.py  utils.js
tests/unit/: errors.spec.js  ignore.spec.js  sessions.spec.js  shortucts.spec.js  utilities.spec.js
(+333 files in other folders)
